# yast-mail

./: .cvsignore  .gitignore  .travis.yml  MAINTAINER  README  README.md  RPMNAME  SUBDIRS  VERSION  configure.in  configure.in.in  yast2-config-mail.spec.in  yast2-mail.spec.in
.github/workflows/: ci.yml
agents/: .cvsignore  CyrusConfParser.pm  Makefile.am  MasterCFParser.pm  ag_cyrus_conf  ag_fetchmailrc  ag_mail_ldaptable  ag_mailtable  ag_postfix_mastercf  ag_smtp_auth  cfg_amavis.scr  cfg_fetchmail.scr  cfg_mail.scr  cfg_postfix.scr  cfg_sendmail.scr  mail_cyrusconf.scr  mail_fetchmail.scr  mail_mastercf.scr  mail_p_aliases.scr  mail_p_auth.scr  mail_p_canonical.scr  mail_p_virtual.scr  mail_s_aliases.scr  mail_s_auth.scr  mail_s_generics.scr  mail_s_virtuser.scr  setup_dkim_verifying.pl  sysconfig.mail  test-fetchmailrc  test-fetchmailrc-i.out  test-fetchmailrc.in  test-fetchmailrc.out  test-mailtable  test-mailtable-1.out  test-mailtable-18487.out  test-mailtable-2.out  test-mailtable-3.out  test-mailtable-4.out
conf/: Makefile.am  cfg_mail.scr  mail_fetchmail.scr  mail_p_aliases.scr  mail_p_canonical.scr  mail_p_virtual.scr  mail_s_aliases.scr  mail_s_generics.scr  mail_s_virtuser.scr  rc_mail.scr  rc_postfix.scr  rc_sendmail.scr
doc/: Makefile.am  fetchmailrc.txt  smtp-auth-spec  white-papier-advanced  workflow.dia  workflow.dot
doc/autodocs/: Makefile.am
package/: yast2-config-mail.changes  yast2-mail.changes  yast2-mail.spec
permissions/: Makefile  Makefile.am  Makefile.in
schema/: Makefile.am
src/: Mail.ycp  MailAliases.ycp  MailServer.ycp  MailServerLDAP.pm  MailTable.pm  MailTableInclude.pm  Makefile.am  ag_fetchmailrc  ag_mailtable  helps.ycp  mail-advanced.ycp  mail-server.ycp  mail-server_auto.ycp  mail-server_complex.ycp  mail-server_dialogs.ycp  mail-server_helps.ycp  mail-server_ldap-setup.ycp  mail-server_proposal.ycp  mail-server_update.rb  mail-server_update.ycp  mail-server_wizards.ycp  mail-standard.ycp  mail.desktop  mail.rnc  mail.y2cc  mail.ycp  mail_auto.ycp  mail_summary.ycp  mail_write.ycp  menuentry_mail.y2cc  menuentry_mail.ycp  misc.ycp  suse-mailserver.schema  ui.ycp  widgets.ycp  wj.ycp
src/YaPI/: MailServer.pm  Makefile  Makefile.am  Makefile.in
src/autoyast-rnc/: mail.rnc
src/clients/: mail-advanced.rb  mail-advanced.ycp  mail-server.rb  mail-server.ycp  mail-server_auto.rb  mail-server_auto.ycp  mail-server_ldap-setup.rb  mail-server_ldap-setup.ycp  mail-server_proposal.rb  mail-standard.rb  mail.rb  mail_auto.rb
src/desktop/: mail.desktop  org.opensuse.yast.Mail.desktop
src/fillup/: sysconfig.mail
src/include/mail/: helps.rb  mail-server_complex.rb  mail-server_complex.ycp  mail-server_dialogs.rb  mail-server_dialogs.ycp  mail-server_helps.rb  mail-server_helps.ycp  mail-server_wizards.rb  mail-server_wizards.ycp  ui.rb  ui.ycp  widgets.rb  widgets.ycp  wj.rb  wj.ycp
src/modules/: Mail.rb  Mail.ycp  MailServer.rb
src/modules/YaPI/: MailServer.pm
src/scrconf/: cfg_postfix.scr  cfg_sendmail.scr  etc_imapd_conf.scr  mail_aliases.scr  mail_fetchmail.scr  mail_ldaptable.scr  mail_maincf.scr  mail_p_canonical.scr  mail_s_auth.scr  mail_s_generics.scr  mail_saslpasswd.scr
src/servers_non_y2/: MasterCFParser.pm  ag_fetchmailrc  ag_mailconfig  ag_mailtable  ag_smtp_auth  setup_dkim_verifying.pl
test/: mail_aliases_test.rb  mail_test.rb  test_helper.rb
test/data/: empty
testsuite/: Makefile.am
testsuite/tests/: aliases.out  mergeTables.rb  mergeTables.ycp  readwrite.out  readwrite.rb  readwrite.ycp  rootalias.out  rootalias.rb  rootalias.ycp
testsuite/tests.epag/: fm1.rw.rb  fm1.w.data  fm1.w.run  fm2.r.data  fm2.r.run  fm2.rw.rb  fm2.rw.ycp  fm2.w.data  fm3.r.data  fm3.r.run  fm3.rw.rb  fm3.rw.ycp  fm3.w.data  fm3.w.run
testsuite/yast2-mail.test/: ag_fetchmailrc.exp  mail-server_ldap-setup-1.ycp  mail-server_ldap-setup-2.ycp  mail-server_ldap-setup-3.ycp  mail-server_ldap-setup-4.ycp
users-plugin/: Makefile  Makefile.am  Makefile.in  UsersPluginMail.pm  users_plugin_mail.ycp  users_plugin_mail_groups.ycp
users-plugin/clients/: users_plugin_mail.rb  users_plugin_mail.ycp  users_plugin_mail_groups.rb
users-plugin/modules/: UsersPluginMail.pm
