dnl Process this file with autoconf to produce a configure script.
AC_INIT(src/Makefile.am) dnl a source file from your sub dir, but acinclude.m4 does the job
AC_CANONICAL_HOST
AC_ARG_PROGRAM

VERSION=`cat ${srcdir}/VERSION`
RPMNAME=`cat ${srcdir}/RPMNAME`
MAINTAINER=`cat ${srcdir}/MAINTAINER`
DOCDIR=/usr/share/doc/packages/$RPMNAME
YAST2DIR=/usr/lib/YaST2

prefix=$YAST2DIR

AM_INIT_AUTOMAKE($RPMNAME, $VERSION) dnl searches for some needed programs

AC_SUBST(VERSION)
AC_SUBST(RPMNAME)
AC_SUBST(MAINTAINER)
AC_SUBST(DOCDIR)
AC_SUBST(YAST2DIR)

dnl Checks for programs.
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_MAKE_SET

dnl Allow conditionals in .am files
AM_CONDITIONAL(ISIX86, [case $host_cpu in i*86) true;; *) false;; esac])
AM_CONDITIONAL(ISALPHA, [case $host_cpu in alpha*) true;; *) false;; esac])
AM_CONDITIONAL(ISSPARC, [case $host_cpu in sparc*) true;; *) false;; esac])
AM_CONDITIONAL(ISPPC, [case $host_cpu in powerpc*) true;; *) false;; esac])

AC_OUTPUT(Makefile
	package/yast2-config-mail.spec:yast2-config-mail.spec.in
	src/Makefile
	doc/Makefile
	doc/autodocs/Makefile
	testsuite/Makefile)
