#
# Makefile.am for y2c_mail/agents
#
# $Id$
#


# ag_fetchmailrc is tested in testsuite dir
TESTS = test-mailtable
# ycp normalization does not work yet
XFAIL_TESTS = test-mailtable
testdata = \
	test-mailtable-1.in test-mailtable-1.out \
	test-mailtable-2.in test-mailtable-2.out \
	test-mailtable-3.in test-mailtable-3.out \
	test-mailtable-4.in test-mailtable-4.out \
	test-mailtable-18487.in test-mailtable-18487.out

EXTRA_DIST = $(TESTS) $(testdata)
