#
# Makefile.am for y2c_mail/conf
#
# $Id$
#

scrconfdir = $(YAST2DIR)/scrconf

scrconf_DATA = \
	cfg_amavis.scr		\
	cfg_mail.scr		\
	cfg_postfix.scr		\
	cfg_sendmail.scr	\
	mail_fetchmail.scr	\
	mail_p_aliases.scr	\
	mail_p_canonical.scr	\
	mail_p_virtual.scr	\
	mail_s_aliases.scr	\
	mail_s_generics.scr	\
	mail_s_virtuser.scr

EXTRA_DIST = $(scrconf_DATA)
